# aoc2025

./: .gitignore  LICENSE  README.md  aoc2025.cabal
.github/workflows/: haskell.yaml
app/: Main.hs
src/: AllDays.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Utils.hs
test/: Main.hs
