cabal-version:      3.4
name:               aoc2025
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kai-Oliver Prott
maintainer:         kai.prott@hotmail.de
build-type:         Simple
category:           Game
synopsis:           Advent of Code 2025
description:        My solutions for the Advent of Code 2025

source-repository head
    type:     git
    location: git@github.com:Ziharrk/aoc2025.git

common ghc_options
    ghc-options: -Wall
    default-language: GHC2021
    other-extensions: DeriveAnyClass,
                      DerivingStrategies,
                      LambdaCase,
                      MultiWayIf,
                      OverloadedRecordDot,
                      TemplateHaskell,
                      TypeFamilies,
    build-depends:    base               >= 4.18,
                      template-haskell   >= 2.20,
                      parsec            ^>= 3.1,
                      text              ^>= 2.1,
                      extra             ^>= 1.8,
                      containers        ^>= 0.6,
                      vector            ^>= 0.13,
                      deepseq           ^>= 1.5,
                      transformers      ^>= 0.6,
                      array             ^>= 0.5,
                      search-algorithms ^>= 0.3,
                      pqueue            ^>= 1.5,
                      maximal-cliques   ^>= 0.1,
                      sbv               ^>= 10.12,
                      JuicyPixels       ^>= 3.3.9,
                      mtl               ^>= 2.3,
                      equivalence       ^>= 0.4

library
    import:           ghc_options
    exposed-modules:  AllDays,
                      Tuple,
                      Utils,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6,
                      Day7,
                      Day8,
                      Day9,
                      Day10,
                      Day11,
                      Day12,
    hs-source-dirs:   src

executable aoc2025
    import:           ghc_options
    ghc-options:      -O2 -threaded -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    aoc2025
    hs-source-dirs:   app

test-suite aoc-test
    import:           ghc_options
    type:             exitcode-stdio-1.0
    ghc-options:      -O2 -threaded -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    aoc2025,
                      time
    hs-source-dirs:   test
